fix mobile layout items alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,13 +20,22 @@ a:active {
     color: #8a54ff;
 }
 
-img {
-    border: 2px solid white;
+.regular-img img  {
+    border: 4px solid white;
    border-radius: 10px;
    display: flex;
-   justify-self: center;
-   width: 70%;
+   justify-self: flex-end;
+   height: auto;
+   width: 90%;
 }
+
+.regular-img figcaption  {
+   display: flex;
+   justify-self: flex-end;
+   height: auto;
+   width: 90%;
+}
+
 
 /* ---- <<HOME PAGE>> PROJECTS & BLOGS GRID LAYOUT---- */
 .collection-container {
@@ -34,7 +43,7 @@ img {
     flex-wrap: wrap;
     justify-content: space-around;
     gap: .65em;
-    min-width: 100vh;
+    /* min-width: 100vh; */
 }
 .thumbnail {
     border-radius: 8px;
@@ -177,10 +186,12 @@ nav {
 }
 }
 
-/* 
-@media screen and (min-width: 700px) {
-    .container {
-        flex-direction: row;
-        flex-wrap: wrap;
+
+@media screen and (max-width: 700px) {
+    .collection-container {
+        flex-direction: column;
+        max-width: 70vh;
+        min-width: none;
+        /* flex-wrap: wrap; */
     }
-} */
+}
